[gd_scene load_steps=4 format=1]

[ext_resource path="res://CashDesk/CashDesk_area.gd" type="Script" id=1]
[ext_resource path="res://inventory.tscn" type="PackedScene" id=2]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[node name="CashDesk_area" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

build_mode = 0
polygon = Vector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="inventory" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 64, 64 )
capacity = -1
x_rand = Vector2( 5, 15 )
y_rand = Vector2( 15, -25 )

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[connection signal="area_enter" from="." to="." method="_on_CashDesk_area_area_enter"]

[connection signal="area_exit" from="." to="." method="_on_CashDesk_area_area_exit"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


